--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "algoliasearch": "^3.21.1",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "handlebars-helpers": "^0.8.0",
     "hbs": "~4.0.1",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.24",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
